# workspaces

maybe/: application.py  pyproject.toml
maybe/assets/: shopped_data.db
maybe/setup/: coffee.sql  innit_db.py
maybe/templates/: website.html
oscar_proj/: app.py  pyproject.toml
oscar_proj/assets/: shop_data.db
oscar_proj/setup/: init_db.py  tihoi.sql
oscar_proj/templates/: base.html
pleasework/: app.py
pleasework/assets/: shop_data.db
pleasework/setup/: init_db.py  setup.txt  tihoi.sql
pleasework/templates/: base.html
